examples/test/testpolicy19404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19404
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key41: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
          key33: value15
      podSelector:
        matchLabels:
          key3: value22
          key44: value32
